--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <meta content="Traces, generic, general-purpose, helper code, library, layer" name="keywords" />
 <link rel="stylesheet" href="pygments-default.css" type="text/css" />
 <link rel="stylesheet" href="traces.css" type="text/css" />
-</head>
+<link href="traces-icon.png" rel="icon"></head>
 <body>
 <div class="document">
 
 
 <span class="target" id="top"></span><p><span class="raw-html"><a name="traces_top"></a></span></p>
-<p><span class="raw-html"><div class="banner"><p><em>Traces documentation</em> <a href="http://traces.esperide.org">browse latest</a> <a href="https://olivier-boudeville.github.io/Ceylan-Traces/traces.html">browse mirror</a> <a href="traces.pdf">get PDF</a> <a href="#traces_top">go to top</a> <a href="#traces_bottom">go to bottom</a> <a href="mailto:about(dash)traces(at)esperide(dot)com?subject=[Ceylan-Traces]%20Remark">mail us</a></p></div></span></p>
+<p><span class="raw-html"><div class="banner"><p><em><a href="http://traces.esperide.org">Traces documentation</a></em> <a href="http://traces.esperide.org">browse latest</a> <a href="https://olivier-boudeville.github.io/Ceylan-Traces/traces.html">browse mirror</a> <a href="traces.pdf">get PDF</a> <a href="#traces_top">go to top</a> <a href="#traces_bottom">go to bottom</a> <a href="mailto:about(dash)traces(at)esperide(dot)com?subject=[Ceylan-Traces]%20Remark">mail us</a></p></div></span></p>
 <p><span class="raw-html"><center><img src="traces-title.png" width="70%"></img></center></span>
 </p>
 <div class="section" id="technical-manual-of-the-ceylan-traces-layer">
@@ -32,13 +32,13 @@
 <tr class="field"><th class="field-name">Creation Date:</th><td class="field-body"><p class="first">Wednesday, August 11, 2010</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Lastly Updated:</th><td class="field-body"><p class="first">Sunday, May 6, 2018</p>
+<tr class="field"><th class="field-name">Lastly Updated:</th><td class="field-body"><p class="first">Saturday, December 8, 2018</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Status:</th><td class="field-body"><p class="first">Work in progress</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.0.6</p>
+<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.0.7</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Dedication:</th><td class="field-body"><p class="first">Users and maintainers of the <tt class="docutils literal">Traces</tt> layer.</p>
