Traces doc updated.

--- a/Ceylan-Traces-Layer-technical-manual-english.html
+++ b/Ceylan-Traces-Layer-technical-manual-english.html
@@ -8,7 +8,9 @@
 <meta content="Traces, log, browse, emit, layer, generic, general-purpose, helper code, library, layer" name="keywords" />
 <link rel="stylesheet" href="pygments-default.css" type="text/css" />
 <link rel="stylesheet" href="traces.css" type="text/css" />
-<link href="traces-icon.png" rel="icon"></head>
+<link href="traces-icon.png" rel="icon">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 <div class="document">
 
@@ -32,13 +34,13 @@
 <tr class="field"><th class="field-name">Creation Date:</th><td class="field-body"><p class="first">Wednesday, August 11, 2010</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Lastly Updated:</th><td class="field-body"><p class="first">Sunday, February 3, 2019</p>
+<tr class="field"><th class="field-name">Lastly Updated:</th><td class="field-body"><p class="first">Sunday, February 10, 2019</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Status:</th><td class="field-body"><p class="first">Work in progress</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.9.2</p>
+<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.9.3</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Dedication:</th><td class="field-body"><p class="first">Users and maintainers of the <tt class="docutils literal">Traces</tt> layer.</p>
