--- a/traces.html
+++ b/traces.html
@@ -31,16 +31,16 @@
 <tr class="field"><th class="field-name">Contact:</th><td class="field-body"><p class="first">about (dash) traces (at) esperide (dot) com</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Creation Date:</th><td class="field-body"><p class="first">Wednesday, August 11, 2010</p>
+<tr class="field"><th class="field-name">Creation date:</th><td class="field-body"><p class="first">Wednesday, August 11, 2010</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Lastly Updated:</th><td class="field-body"><p class="first">Sunday, February 10, 2019</p>
+<tr class="field"><th class="field-name">Lastly updated:</th><td class="field-body"><p class="first">Wednesday, February 20, 2019</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Status:</th><td class="field-body"><p class="first">Work in progress</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.9.3</p>
+<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.9.4</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Dedication:</th><td class="field-body"><p class="first">Users and maintainers of the <tt class="docutils literal">Traces</tt> layer.</p>
@@ -406,8 +406,8 @@ $ make traceManagement_run
 <div class="section" id="ending-word">
 <h2><a class="toc-backref" href="#id42">Ending Word</a></h2>
 <p>Have fun with Ceylan-Traces!</p>
-<div class="figure">
-<img alt="Traces logo" src="traces-title.png" />
+<div class="figure align-center">
+<img alt="Traces logo" src="traces-title.png" style="width: 50%;" />
 </div>
 <p><span class="raw-html"><a name="traces_bottom"></a></span></p>
 </div>
