--- a/api-doc/class_TraceEmitter.html
+++ b/api-doc/class_TraceEmitter.html
@@ -167,6 +167,7 @@ separator).</p>
 <tr><td valign="top"><a href="#getAttribute-2">getAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#getAttributes-2">getAttributes/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#getMaybeAttribute-2">getMaybeAttribute/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#get_categorization-1">get_categorization/1</a></td><td>Returns the categorization of this trace emitter.</td></tr>
 <tr><td valign="top"><a href="#get_plain_name-1">get_plain_name/1</a></td><td>Returns the name of this trace emitter, as a plain string (not as a 
 binary).</td></tr>
 <tr><td valign="top"><a href="#get_short_description-1">get_short_description/1</a></td><td>Returns a short description of this trace emitter.</td></tr>
@@ -195,8 +196,7 @@ requested and waited).</td></tr>
 requested and waited).</td></tr>
 <tr><td valign="top"><a href="#setAttribute-3">setAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#setAttributes-2">setAttributes/2</a></td><td></td></tr>
-<tr><td valign="top"><a href="#set_categorization-2">set_categorization/2</a></td><td>Sets the trace categorization (part of the full emitter categorization) 
-for this trace emitter to specified plain string.</td></tr>
+<tr><td valign="top"><a href="#set_categorization-2">set_categorization/2</a></td><td>Sets the categorization of this trace emitter.</td></tr>
 <tr><td valign="top"><a href="#subtractFromAttribute-3">subtractFromAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#swapInAttribute-3">swapInAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#sync-1">sync/1</a></td><td>Synchronises the caller with the trace aggregator, ensuring that all 
@@ -371,9 +371,18 @@ for this trace emitter to specified plain string.</td></tr>
 
 <h3 class="function"><a name="getMaybeAttribute-2">getMaybeAttribute/2</a></h3>
 <div class="spec">
-<p><tt>getMaybeAttribute(State::<a href="wooper.html#type-state">wooper:state()</a>, AttributeName::<a href="#type-attribute_name">attribute_name()</a>) -&gt; <a href="#type-maybe">maybe</a>({value, <a href="#type-attribute_value">attribute_value()</a>})</tt><br></p>
+<p><tt>getMaybeAttribute(State::<a href="wooper.html#type-state">wooper:state()</a>, AttributeName::<a href="#type-attribute_name">attribute_name()</a>) -&gt; <a href="#type-maybe">maybe</a>(<a href="#type-attribute_value">attribute_value()</a>)</tt><br></p>
 <p> </p>
 </div>
+
+<h3 class="function"><a name="get_categorization-1">get_categorization/1</a></h3>
+<div class="spec">
+<p><tt>get_categorization(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-bin_emitter_categorization">bin_emitter_categorization()</a></tt><br></p>
+<p> </p>
+</div><p><p>Returns the categorization of this trace emitter.</p>
+
+ (helper)
+</p>
 
 <h3 class="function"><a name="get_plain_name-1">get_plain_name/1</a></h3>
 <div class="spec">
@@ -587,14 +596,13 @@ requested and waited).</p>
 
 <h3 class="function"><a name="set_categorization-2">set_categorization/2</a></h3>
 <div class="spec">
-<p><tt>set_categorization(TraceCategorization::<a href="#type-emitter_categorization">emitter_categorization()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
+<p><tt>set_categorization(TraceEmitterCategorization::<a href="#type-emitter_categorization">emitter_categorization()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="wooper.html#type-state">wooper:state()</a></tt><br></p>
 <p> </p>
-</div><p><p>Sets the trace categorization (part of the full emitter categorization) 
-for this trace emitter to specified plain string.</p>
+</div><p><p>Sets the categorization of this trace emitter.</p>
 
- <p>Setting the trace categorization early in the constructor, before sending any 
-trace, allows to have all traces for a given emitter correctly gathered in the 
-same trace category, which is a lot clearer when browsing afterwards.</p>
+ <p>Setting that categorization early in the constructor, before sending any 
+trace, allows to have all traces for a given emitter be correctly gathered in 
+the same category, which is a lot clearer when browsing afterwards.</p>
 
  (helper)
 </p>
