--- a/api-doc/traces.html
+++ b/api-doc/traces.html
@@ -42,16 +42,12 @@
 
 
 <h3 class="typedecl"><a name="type-bin_message">bin_message()</a></h3>
-<p><tt>bin_message() = <a href="#type-bin_string">bin_string()</a></tt></p>
-<p> A trace message.</p>
+<p><tt>bin_message() = <a href="trace_utils.html#type-trace_bin_message">trace_utils:trace_bin_message()</a></tt></p>
+<p> An actual (binary) trace message.</p>
 
 <h3 class="typedecl"><a name="type-bin_message_categorization">bin_message_categorization()</a></h3>
-<p><tt>bin_message_categorization() = <a href="#type-bin_string">bin_string()</a> | uncategorized</tt></p>
-<p><p> A message may or may not (which is the default and general case) be 
-categorized.</p>
+<p><tt>bin_message_categorization() = <a href="trace_utils.html#type-trace_bin_message_categorization">trace_utils:trace_bin_message_categorization()</a></tt></p>
 
- Note that the 'bin_' prefix is a bit misleading here, as an atom can still be
- used.</p>
 
 <h3 class="typedecl"><a name="type-bin_string">bin_string()</a></h3>
 <p><tt>bin_string() = <a href="text_utils.html#type-bin_string">text_utils:bin_string()</a></tt></p>
@@ -95,13 +91,12 @@ separated by dots.</p>
 <p> The location (free text, typically host) of a trace emitter.</p>
 
 <h3 class="typedecl"><a name="type-message">message()</a></h3>
-<p><tt>message() = <a href="#type-ustring">ustring()</a></tt></p>
-<p> A trace message.</p>
+<p><tt>message() = <a href="trace_utils.html#type-trace_message">trace_utils:trace_message()</a></tt></p>
+<p> An actual trace message.</p>
 
 <h3 class="typedecl"><a name="type-message_categorization">message_categorization()</a></h3>
-<p><tt>message_categorization() = <a href="#type-ustring">ustring()</a> | uncategorized</tt></p>
-<p> A message may or may not (which is the default and general case) be
- categorized.</p>
+<p><tt>message_categorization() = <a href="trace_utils.html#type-trace_message_categorization">trace_utils:trace_message_categorization()</a></tt></p>
+
 
 <h3 class="typedecl"><a name="type-priority">priority()</a></h3>
 <p><tt>priority() = <a href="trace_utils.html#type-trace_priority">trace_utils:trace_priority()</a></tt></p>
