Traces doc updated.

--- a/api-doc/class_TraceEmitter.html
+++ b/api-doc/class_TraceEmitter.html
@@ -479,11 +479,11 @@ instance.</p>
 Myriad) that are called directly from this instance process, or helper 
 functions with no corresponding WOOPER state, to plug to the same trace 
 aggregator as used by this instance with mostly the same settings, through a 
-corresponding trace bridge.</p>
+corresponding trace bridge (refer to the trace_bridge module).</p>
 
- <p>See also: the register_as_bridge/{2,3} static methods, offered to normal 
-(non-TraceEmitter, probably not even non-WOOPER) processes that nevertheless 
-need to send traces.</p>
+ <p>See also: the register_as_bridge/{2,3} static methods, offered to extra, 
+plain (non-TraceEmitter, probably not even non-WOOPER) processes that 
+nevertheless need to send traces.</p>
 
  (helper)
 </p>
