--- a/api-doc/overview-summary.html
+++ b/api-doc/overview-summary.html
@@ -10,9 +10,9 @@
 <div class="navbar"><a name="#navbar_top"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
 <h1>Welcome to the documentation of the Ceylan-Traces API
 </h1>
-<p>Copyright © 2021 Olivier Boudeville
+<p>Copyright © 2024 Olivier Boudeville
 </p>
-<p><b>Version:</b> API 1.0.20
+<p><b>Version:</b> 1.0.21
 </p>
 <p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><code>olivier (dot) boudeville (at) esperide (dot) com</code></a>).</p>
 <p><b>References</b><ul><li>See the <a href="http://traces.esperide.org" target="_blank">Traces official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-Traces/index.html" target="_blank">its mirror</a>
@@ -28,7 +28,7 @@
 <p><code>Ceylan-Traces</code> provides Erlang applications with advanced trace services, so that the user can efficiently log, browse and search through detailed runtime messages that may be emitted concurrently (i.e. in a parallel, distributed way) by all kinds of processes.
 </p>
 
-<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.20 (as of Thursday, January 4, 2024).
+<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.21 (as of Sunday, January 14, 2024).
 </p>
 
 
