--- a/api-doc/traces_for_apps.html
+++ b/api-doc/traces_for_apps.html
@@ -73,7 +73,7 @@ later (typically only once the desired filename for the traces file will be
 known for good, i.e. at its first renaming).</p>
 
  <p>Here we disable explicitly the trapping of EXIT signals, as a function run 
-through "erl -eval" (like our apps) or through "erl -run" will be executed in 
+through "erl -eval" or through "erl -run" (like our apps) will be executed in 
 a process that will silently trap EXIT signals, which would mean that the 
 crash of any process created from the app, even thanks to spawn_link, would 
 most probably remain unnoticed (just leading to an EXIT message happily 
