--- a/api-doc/traces_utils.html
+++ b/api-doc/traces_utils.html
@@ -43,11 +43,21 @@ with OTP.</p>
 <p><code>registration_scope() = <a href="naming_utils.html#type-registration_scope">naming_utils:registration_scope()</a></code></p>
 
 
+<h3 class="typedecl"><a name="type-three_digit_version">three_digit_version()</a></h3>
+<p><code>three_digit_version() = <a href="basic_utils.html#type-three_digit_version">basic_utils:three_digit_version()</a></code></p>
+
+
+<h3 class="typedecl"><a name="type-ustring">ustring()</a></h3>
+<p><code>ustring() = <a href="text_utils.html#type-ustring">text_utils:ustring()</a></code></p>
+
+
 <h2><a name="index">Function Index</a></h2>
 <table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#get_aggregator_look_up_scope-0">get_aggregator_look_up_scope/0</a></td><td>Returns the look-up scope that applies to the trace aggregator in the
  current context.</td></tr>
 <tr><td valign="top"><a href="#get_aggregator_registration_scope-0">get_aggregator_registration_scope/0</a></td><td>Returns the registration scope that applies to the trace aggregator in
  the current context.</td></tr>
+<tr><td valign="top"><a href="#get_traces_version-0">get_traces_version/0</a></td><td>Returns the version of the Traces library being used.</td></tr>
+<tr><td valign="top"><a href="#get_traces_version_string-0">get_traces_version_string/0</a></td><td>Returns the version of the Traces library being used, as a string.</td></tr>
 <tr><td valign="top"><a href="#name_trace_file_from-1">name_trace_file_from/1</a></td><td>Names the trace file currently managed by the trace aggregator according 
 to the specified module name.</td></tr>
 </table>
@@ -69,6 +79,18 @@ to the specified module name.</td></tr>
 </div><p>Returns the registration scope that applies to the trace aggregator in
  the current context.
 </p>
+
+<h3 class="function"><a name="get_traces_version-0">get_traces_version/0</a></h3>
+<div class="spec">
+<p><code>get_traces_version() -&gt; <a href="#type-three_digit_version">three_digit_version()</a></code><br></p>
+<p> </p>
+</div><p>Returns the version of the Traces library being used.</p>
+
+<h3 class="function"><a name="get_traces_version_string-0">get_traces_version_string/0</a></h3>
+<div class="spec">
+<p><code>get_traces_version_string() -&gt; <a href="#type-ustring">ustring()</a></code><br></p>
+<p> </p>
+</div><p>Returns the version of the Traces library being used, as a string.</p>
 
 <h3 class="function"><a name="name_trace_file_from-1">name_trace_file_from/1</a></h3>
 <div class="spec">
