--- a/api-doc/traces_for_apps.html
+++ b/api-doc/traces_for_apps.html
@@ -10,135 +10,69 @@
 <hr>
 
 <h1>Module traces_for_apps</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>This module gathers all the code that allows to <b>lighten the trace
- macros for (Myriad) applications</b>.
+<ul class="index"><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>
 
-
-<h2><a name="description">Description</a></h2>This module gathers all the code that allows to <b>lighten the trace
- macros for (Myriad) applications</b>.
 
 <h2><a name="types">Data Types</a></h2>
 
 <h3 class="typedecl"><a name="type-aggregator_pid">aggregator_pid()</a></h3>
-<p><code>aggregator_pid() = <a href="class_TraceAggregator.html#type-aggregator_pid">class_TraceAggregator:aggregator_pid()</a></code></p>
+<p><code>aggregator_pid() = <a href="class_TraceAggregator.html#type-aggregator_pid" docgen-rel="seetype" docgen-href="class_TraceAggregator#aggregator_pid/0">class_TraceAggregator:aggregator_pid()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-initialise_supervision">initialise_supervision()</a></h3>
-<p><code>initialise_supervision() = <a href="class_TraceAggregator.html#type-initialise_supervision">class_TraceAggregator:initialise_supervision()</a></code></p>
+<p><code>initialise_supervision() = <a href="class_TraceAggregator.html#type-initialise_supervision" docgen-rel="seetype" docgen-href="class_TraceAggregator#initialise_supervision/0">class_TraceAggregator:initialise_supervision()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-module_name">module_name()</a></h3>
-<p><code>module_name() = <a href="basic_utils.html#type-module_name">basic_utils:module_name()</a></code></p>
+<p><code>module_name() = <a href="basic_utils.html#type-module_name" docgen-rel="seetype" docgen-href="basic_utils#module_name/0">basic_utils:module_name()</a></code></p>
 
 
 <h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#app_immediate_stop-2">app_immediate_stop/2</a></td><td>Stops specified (Myriad - not specifically related to OTP) application 
-immediately, not waiting for any trace supervisor, stopping the trace 
-aggregator, and finishing on the shell.</td></tr>
-<tr><td valign="top"><a href="#app_start-2">app_start/2</a></td><td>Starts the specified application.</td></tr>
-<tr><td valign="top"><a href="#app_start-3">app_start/3</a></td><td>Starts specified (Myriad - not specifically related to OTP) application, 
-deciding whether EXIT messages shall be trapped.</td></tr>
-<tr><td valign="top"><a href="#app_start-4">app_start/4</a></td><td>Starts specified (Myriad - not specifically related to OTP) application, 
-deciding whether EXIT messages shall be trapped and the registration scope of 
-the resulting trace aggregator.</td></tr>
-<tr><td valign="top"><a href="#app_stop-3">app_stop/3</a></td><td>Stops the specified (Myriad - not specifically related to OTP) 
-application, waiting for the trace supervisor if requested.</td></tr>
-<tr><td valign="top"><a href="#app_stop_on_shell-2">app_stop_on_shell/2</a></td><td>Stops specified (Myriad - not specifically related to OTP) application, 
-stopping the trace aggregator and finishing on the shell.</td></tr>
+<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#app_immediate_stop-2">app_immediate_stop/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#app_start-2">app_start/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#app_start-3">app_start/3</a></td><td></td></tr>
+<tr><td valign="top"><a href="#app_start-4">app_start/4</a></td><td></td></tr>
+<tr><td valign="top"><a href="#app_stop-3">app_stop/3</a></td><td></td></tr>
+<tr><td valign="top"><a href="#app_stop_on_shell-2">app_stop_on_shell/2</a></td><td></td></tr>
 </table>
 
 <h2><a name="functions">Function Details</a></h2>
 
 <h3 class="function"><a name="app_immediate_stop-2">app_immediate_stop/2</a></h3>
 <div class="spec">
-<p><code>app_immediate_stop(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
+<p><code>app_immediate_stop(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops specified (Myriad - not specifically related to OTP) application 
-immediately, not waiting for any trace supervisor, stopping the trace 
-aggregator, and finishing on the shell.</p>
-
- To be called from the counterpart macro.
-</p>
+</div>
 
 <h3 class="function"><a name="app_start-2">app_start/2</a></h3>
 <div class="spec">
-<p><code>app_start(ModuleName::<a href="#type-module_name">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision">initialise_supervision()</a>) -&gt; <a href="#type-aggregator_pid">aggregator_pid()</a></code><br></p>
+<p><code>app_start(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision" docgen-rel="seetype" docgen-href="#initialise_supervision/0">initialise_supervision()</a>) -&gt; <a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a></code><br></p>
 <p> </p>
-</div><p><p>Starts the specified application.</p>
-
- <p>To be called notably from the counterpart macro.</p>
-
- <p>The trace supervisor can be requested to be initialized now or not at all, or 
-later (typically only once the desired filename for the traces file will be 
-known for good, i.e. at its first renaming).</p>
-
- <p>Here we disable explicitly the trapping of EXIT signals, as a function run 
-through "erl -eval" or through "erl -run" (like our apps) will be executed in 
-a process that will silently trap EXIT signals, which would mean that the 
-crash of any process created from the app, even thanks to spawn_link, would 
-most probably remain unnoticed (just leading to an EXIT message happily 
-sitting in the mailbox of the app process).</p>
-
- The resulting trace aggregator will be registered globally (only).
-</p>
+</div>
 
 <h3 class="function"><a name="app_start-3">app_start/3</a></h3>
 <div class="spec">
-<p><code>app_start(ModuleName::<a href="#type-module_name">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision">initialise_supervision()</a>, DisableExitTrapping::boolean()) -&gt; <a href="#type-aggregator_pid">aggregator_pid()</a></code><br></p>
+<p><code>app_start(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision" docgen-rel="seetype" docgen-href="#initialise_supervision/0">initialise_supervision()</a>, DisableExitTrapping::boolean()) -&gt; <a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a></code><br></p>
 <p> </p>
-</div><p><p>Starts specified (Myriad - not specifically related to OTP) application, 
-deciding whether EXIT messages shall be trapped.</p>
-
- <p>The trace supervisor can be requested to be initialized now or not at all, or 
-later (typically only once the desired filename for the traces file will be 
-known for good, i.e. at its first renaming).</p>
-
- <p>The trapping of EXIT messages may be disabled (by setting DisableExitTrapping 
-to true), typically in most tests / cases (see comments in 
-app_start/2). However it may also be left as it is, notably when this function 
-is executed from a supervisor (see traces_bridge_sup:init/1), whose trapping 
-of EXITs shall not be altered (otherwise, for example, shutdowns may freeze).</p>
-
- The resulting trace aggregator will be registered globally (only).
-</p>
+</div>
 
 <h3 class="function"><a name="app_start-4">app_start/4</a></h3>
 <div class="spec">
-<p><code>app_start(ModuleName::<a href="#type-module_name">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision">initialise_supervision()</a>, DisableExitTrapping::boolean(), AggRegScope::<a href="naming_utils.html#type-registration_scope">naming_utils:registration_scope()</a>) -&gt; <a href="#type-aggregator_pid">aggregator_pid()</a></code><br></p>
+<p><code>app_start(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, InitTraceSupervisor::<a href="#type-initialise_supervision" docgen-rel="seetype" docgen-href="#initialise_supervision/0">initialise_supervision()</a>, DisableExitTrapping::boolean(), AggRegScope::<a href="naming_utils.html#type-registration_scope" docgen-rel="seetype" docgen-href="naming_utils#registration_scope/0">naming_utils:registration_scope()</a>) -&gt; <a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a></code><br></p>
 <p> </p>
-</div><p><p>Starts specified (Myriad - not specifically related to OTP) application, 
-deciding whether EXIT messages shall be trapped and the registration scope of 
-the resulting trace aggregator.</p>
-
- <p>The trace supervisor can be requested to be initialized now or not at all, or 
-later (typically only once the desired filename for the traces file will be 
-known for good, i.e. at its first renaming).</p>
-
- The trapping of EXIT messages may be disabled (by setting DisableExitTrapping
- to true), typically in most tests / cases (see comments in
- app_start/2). However it may also be left as it is, notably when this function
- is executed from a supervisor (see traces_bridge_sup:init/1), whose trapping
- of EXITs shall not be altered (otherwise, for example, shutdowns may freeze).
-</p>
+</div>
 
 <h3 class="function"><a name="app_stop-3">app_stop/3</a></h3>
 <div class="spec">
-<p><code>app_stop(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>, WaitForTraceSupervisor::boolean()) -&gt; no_return()</code><br></p>
+<p><code>app_stop(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>, WaitForTraceSupervisor::boolean()) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops the specified (Myriad - not specifically related to OTP) 
-application, waiting for the trace supervisor if requested.</p>
-
- To be called from the counterpart macro.
-</p>
+</div>
 
 <h3 class="function"><a name="app_stop_on_shell-2">app_stop_on_shell/2</a></h3>
 <div class="spec">
-<p><code>app_stop_on_shell(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
+<p><code>app_stop_on_shell(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops specified (Myriad - not specifically related to OTP) application, 
-stopping the trace aggregator and finishing on the shell.</p>
-
- To be called from the counterpart macro, directly or not.</p>
+</div>
 <hr>
 
 <div class="navbar"><a name="#navbar_bottom"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
