--- a/api-doc/traces_for_tests.html
+++ b/api-doc/traces_for_tests.html
@@ -10,80 +10,51 @@
 <hr>
 
 <h1>Module traces_for_tests</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>This module gathers all the code that allows to <b>lighten the trace
- macros for (Myriad) applications</b>.
+<ul class="index"><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>
 
-
-<h2><a name="description">Description</a></h2>This module gathers all the code that allows to <b>lighten the trace
- macros for (Myriad) applications</b>.
 
 <h2><a name="types">Data Types</a></h2>
 
 <h3 class="typedecl"><a name="type-aggregator_pid">aggregator_pid()</a></h3>
-<p><code>aggregator_pid() = <a href="class_TraceAggregator.html#type-aggregator_pid">class_TraceAggregator:aggregator_pid()</a></code></p>
+<p><code>aggregator_pid() = <a href="class_TraceAggregator.html#type-aggregator_pid" docgen-rel="seetype" docgen-href="class_TraceAggregator#aggregator_pid/0">class_TraceAggregator:aggregator_pid()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-module_name">module_name()</a></h3>
-<p><code>module_name() = <a href="basic_utils.html#type-module_name">basic_utils:module_name()</a></code></p>
+<p><code>module_name() = <a href="basic_utils.html#type-module_name" docgen-rel="seetype" docgen-href="basic_utils#module_name/0">basic_utils:module_name()</a></code></p>
 
 
 <h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#test_immediate_stop-2">test_immediate_stop/2</a></td><td>Stops specified test immediately, not waiting for any trace supervisor, 
-stopping the trace aggregator, and finishing on the shell.</td></tr>
-<tr><td valign="top"><a href="#test_start-2">test_start/2</a></td><td>Starts the specified test.</td></tr>
-<tr><td valign="top"><a href="#test_stop-3">test_stop/3</a></td><td>Stops the specified test, waiting for the trace supervisor if requested.</td></tr>
-<tr><td valign="top"><a href="#test_stop_on_shell-2">test_stop_on_shell/2</a></td><td>Stops specified test, stopping the trace aggregator and finishing on the 
-shell.</td></tr>
+<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#test_immediate_stop-2">test_immediate_stop/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#test_start-2">test_start/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#test_stop-3">test_stop/3</a></td><td></td></tr>
+<tr><td valign="top"><a href="#test_stop_on_shell-2">test_stop_on_shell/2</a></td><td></td></tr>
 </table>
 
 <h2><a name="functions">Function Details</a></h2>
 
 <h3 class="function"><a name="test_immediate_stop-2">test_immediate_stop/2</a></h3>
 <div class="spec">
-<p><code>test_immediate_stop(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
+<p><code>test_immediate_stop(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops specified test immediately, not waiting for any trace supervisor, 
-stopping the trace aggregator, and finishing on the shell.</p>
-
- To be called from the counterpart macro.
-</p>
+</div>
 
 <h3 class="function"><a name="test_start-2">test_start/2</a></h3>
 <div class="spec">
-<p><code>test_start(ModuleName::<a href="#type-module_name">module_name()</a>, InitTraceSupervisor::<a href="class_TraceAggregator.html#type-initialise_supervision">class_TraceAggregator:initialise_supervision()</a>) -&gt; <a href="#type-aggregator_pid">aggregator_pid()</a></code><br></p>
+<p><code>test_start(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, InitTraceSupervisor::<a href="class_TraceAggregator.html#type-initialise_supervision" docgen-rel="seetype" docgen-href="class_TraceAggregator#initialise_supervision/0">class_TraceAggregator:initialise_supervision()</a>) -&gt; <a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a></code><br></p>
 <p> </p>
-</div><p><p>Starts the specified test.</p>
-
- <p>To be called from the counterpart macro.</p>
-
- <p>The trace supervisor can be requested to be initialized now or not at all, or 
-later (typically only once the desired filename for the traces file will be 
-known for good, i.e. at its first renaming).</p>
-
- Here we disable explicitly the trapping of EXIT signals, as a function run
- through "erl -eval" (like our apps) or through "erl -run" will be executed in
- a process that will silently trap EXIT signals, which would mean that the
- crash of any process created from the app, even thanks to spawn_link, would
- most probably remain unnoticed (just leading to an EXIT message happily
- sitting in the mailbox of the app process).
-</p>
+</div>
 
 <h3 class="function"><a name="test_stop-3">test_stop/3</a></h3>
 <div class="spec">
-<p><code>test_stop(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>, WaitForTraceSupervisor::boolean()) -&gt; no_return()</code><br></p>
+<p><code>test_stop(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>, WaitForTraceSupervisor::boolean()) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops the specified test, waiting for the trace supervisor if requested.</p>
-
- To be called from the counterpart macro.</p>
+</div>
 
 <h3 class="function"><a name="test_stop_on_shell-2">test_stop_on_shell/2</a></h3>
 <div class="spec">
-<p><code>test_stop_on_shell(ModuleName::<a href="#type-module_name">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
+<p><code>test_stop_on_shell(ModuleName::<a href="#type-module_name" docgen-rel="seetype" docgen-href="#module_name/0">module_name()</a>, TraceAggregatorPid::<a href="#type-aggregator_pid" docgen-rel="seetype" docgen-href="#aggregator_pid/0">aggregator_pid()</a>) -&gt; no_return()</code><br></p>
 <p> </p>
-</div><p><p>Stops specified test, stopping the trace aggregator and finishing on the 
-shell.</p>
-
- To be called from the counterpart macro, directly or not.</p>
+</div>
 <hr>
 
 <div class="navbar"><a name="#navbar_bottom"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
