Traces doc updated.

--- a/api-doc/traces_utils.html
+++ b/api-doc/traces_utils.html
@@ -23,8 +23,8 @@
 <p><code>bin_file_name() = <a href="file_utils.html#type-bin_file_name" docgen-rel="seetype" docgen-href="file_utils#bin_file_name/0">file_utils:bin_file_name()</a></code></p>
 
 
-<h3 class="typedecl"><a name="type-look_up_scope">look_up_scope()</a></h3>
-<p><code>look_up_scope() = <a href="naming_utils.html#type-look_up_scope" docgen-rel="seetype" docgen-href="naming_utils#look_up_scope/0">naming_utils:look_up_scope()</a></code></p>
+<h3 class="typedecl"><a name="type-lookup_scope">lookup_scope()</a></h3>
+<p><code>lookup_scope() = <a href="naming_utils.html#type-lookup_scope" docgen-rel="seetype" docgen-href="naming_utils#lookup_scope/0">naming_utils:lookup_scope()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-module_name">module_name()</a></h3>
@@ -44,7 +44,7 @@
 
 
 <h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#get_aggregator_look_up_scope-0">get_aggregator_look_up_scope/0</a></td><td></td></tr>
+<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#get_aggregator_lookup_scope-0">get_aggregator_lookup_scope/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#get_aggregator_registration_scope-0">get_aggregator_registration_scope/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#get_traces_version-0">get_traces_version/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#get_traces_version_string-0">get_traces_version_string/0</a></td><td></td></tr>
@@ -53,9 +53,9 @@
 
 <h2><a name="functions">Function Details</a></h2>
 
-<h3 class="function"><a name="get_aggregator_look_up_scope-0">get_aggregator_look_up_scope/0</a></h3>
+<h3 class="function"><a name="get_aggregator_lookup_scope-0">get_aggregator_lookup_scope/0</a></h3>
 <div class="spec">
-<p><code>get_aggregator_look_up_scope() -&gt; <a href="#type-look_up_scope" docgen-rel="seetype" docgen-href="#look_up_scope/0">look_up_scope()</a></code><br></p>
+<p><code>get_aggregator_lookup_scope() -&gt; <a href="#type-lookup_scope" docgen-rel="seetype" docgen-href="#lookup_scope/0">lookup_scope()</a></code><br></p>
 <p> </p>
 </div>
 
