--- a/api-doc/class_TraceEmitter.html
+++ b/api-doc/class_TraceEmitter.html
@@ -20,7 +20,7 @@
 
 
 <h3 class="typedecl"><a name="type-attribute_entry">attribute_entry()</a></h3>
-<p><code>attribute_entry() = {<a href="#type-attribute_name" docgen-rel="seetype" docgen-href="#attribute_name/0">attribute_name()</a>, <a href="#type-attribute_value" docgen-rel="seetype" docgen-href="#attribute_value/0">attribute_value()</a>}</code></p>
+<p><code>attribute_entry() = <a href="wooper.html#type-attribute_entry" docgen-rel="seetype" docgen-href="wooper#attribute_entry/0">wooper:attribute_entry()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-attribute_name">attribute_name()</a></h3>
@@ -64,7 +64,7 @@
 
 
 <h3 class="typedecl"><a name="type-instance_pid">instance_pid()</a></h3>
-<p><code>instance_pid() = pid()</code></p>
+<p><code>instance_pid() = <a href="wooper.html#type-instance_pid" docgen-rel="seetype" docgen-href="wooper#instance_pid/0">wooper:instance_pid()</a></code></p>
 
 
 <h3 class="typedecl"><a name="type-message">message()</a></h3>
@@ -173,6 +173,7 @@
 <tr><td valign="top"><a href="#send-3">send/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#send-4">send/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#send-5">send/5</a></td><td></td></tr>
+<tr><td valign="top"><a href="#send_categorised_named_emitter-5">send_categorised_named_emitter/5</a></td><td></td></tr>
 <tr><td valign="top"><a href="#send_categorized_emitter-4">send_categorized_emitter/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#send_named_emitter-4">send_named_emitter/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#send_safe-3">send_safe/3</a></td><td></td></tr>
@@ -256,19 +257,19 @@
 
 <h3 class="function"><a name="executeConstOneway-3">executeConstOneway/3</a></h3>
 <div class="spec">
-<p><code>executeConstOneway(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
+<p><code>executeConstOneway(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, ArgumentMaybeList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeConstOnewayAs-3">executeConstOnewayAs/3</a></h3>
 <div class="spec">
-<p><code>executeConstOnewayAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Classname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
+<p><code>executeConstOnewayAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeConstOnewayAs-4">executeConstOnewayAs/4</a></h3>
 <div class="spec">
-<p><code>executeConstOnewayAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Classname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
+<p><code>executeConstOnewayAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, MaybeArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
 </div>
 
@@ -280,19 +281,19 @@
 
 <h3 class="function"><a name="executeConstRequest-3">executeConstRequest/3</a></h3>
 <div class="spec">
-<p><code>executeConstRequest(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
+<p><code>executeConstRequest(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, ArgumentMaybeList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeConstRequestAs-3">executeConstRequestAs/3</a></h3>
 <div class="spec">
-<p><code>executeConstRequestAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
+<p><code>executeConstRequestAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeConstRequestAs-4">executeConstRequestAs/4</a></h3>
 <div class="spec">
-<p><code>executeConstRequestAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Classname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
+<p><code>executeConstRequestAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, MaybeArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a></code><br></p>
 <p> </p>
 </div>
 
@@ -310,13 +311,13 @@
 
 <h3 class="function"><a name="executeOnewayAs-3">executeOnewayAs/3</a></h3>
 <div class="spec">
-<p><code>executeOnewayAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>) -&gt; <a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a></code><br></p>
+<p><code>executeOnewayAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>) -&gt; <a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a></code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeOnewayAs-4">executeOnewayAs/4</a></h3>
 <div class="spec">
-<p><code>executeOnewayAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Classname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a></code><br></p>
+<p><code>executeOnewayAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, OnewayAtom::<a href="#type-oneway_name" docgen-rel="seetype" docgen-href="#oneway_name/0">oneway_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; <a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a></code><br></p>
 <p> </p>
 </div>
 
@@ -334,13 +335,13 @@
 
 <h3 class="function"><a name="executeRequestAs-3">executeRequestAs/3</a></h3>
 <div class="spec">
-<p><code>executeRequestAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>) -&gt; {<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a>}</code><br></p>
+<p><code>executeRequestAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>) -&gt; {<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a>}</code><br></p>
 <p> </p>
 </div>
 
 <h3 class="function"><a name="executeRequestAs-4">executeRequestAs/4</a></h3>
 <div class="spec">
-<p><code>executeRequestAs(State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Classname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; {<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a>}</code><br></p>
+<p><code>executeRequestAs(ParentClassname::<a href="#type-classname" docgen-rel="seetype" docgen-href="#classname/0">classname()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, RequestAtom::<a href="#type-request_name" docgen-rel="seetype" docgen-href="#request_name/0">request_name()</a>, ArgumentList::<a href="#type-method_arguments" docgen-rel="seetype" docgen-href="#method_arguments/0">method_arguments()</a>) -&gt; {<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, <a href="#type-method_internal_result" docgen-rel="seetype" docgen-href="#method_internal_result/0">method_internal_result()</a>}</code><br></p>
 <p> </p>
 </div>
 
@@ -449,6 +450,12 @@
 <h3 class="function"><a name="send-5">send/5</a></h3>
 <div class="spec">
 <p><code>send(TraceSeverity::<a href="#type-trace_severity" docgen-rel="seetype" docgen-href="#trace_severity/0">trace_severity()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Message::<a href="#type-message" docgen-rel="seetype" docgen-href="#message/0">message()</a>, MessageCategorization::<a href="#type-message_categorization" docgen-rel="seetype" docgen-href="#message_categorization/0">message_categorization()</a>, AppTimestamp::<a href="#type-app_timestamp" docgen-rel="seetype" docgen-href="#app_timestamp/0">app_timestamp()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
+<p> </p>
+</div>
+
+<h3 class="function"><a name="send_categorised_named_emitter-5">send_categorised_named_emitter/5</a></h3>
+<div class="spec">
+<p><code>send_categorised_named_emitter(TraceSeverity::<a href="#type-trace_severity" docgen-rel="seetype" docgen-href="#trace_severity/0">trace_severity()</a>, State::<a href="wooper.html#type-state" docgen-rel="seetype" docgen-href="wooper#state/0">wooper:state()</a>, Message::<a href="#type-message" docgen-rel="seetype" docgen-href="#message/0">message()</a>, EmitterCategorization::<a href="#type-emitter_categorization" docgen-rel="seetype" docgen-href="#emitter_categorization/0">emitter_categorization()</a>, EmitterName::<a href="#type-emitter_name" docgen-rel="seetype" docgen-href="#emitter_name/0">emitter_name()</a>) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
 </div>
 
