--- a/api-doc/overview-summary.html
+++ b/api-doc/overview-summary.html
@@ -12,7 +12,7 @@
 </h1>
 <p>Copyright © 2025 Olivier Boudeville
 </p>
-<p><b>Version:</b> 1.0.24
+<p><b>Version:</b> 1.0.26
 </p>
 <p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><code>olivier (dot) boudeville (at) esperide (dot) com</code></a>).</p>
 <p><b>References</b><ul><li>See the <a href="http://traces.esperide.org" target="_blank">Traces official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-Traces/index.html" target="_blank">its mirror</a>
@@ -28,7 +28,7 @@
 <p><code>Ceylan-Traces</code> provides Erlang applications with advanced trace services, so that the user can efficiently log, browse and search through detailed runtime messages that may be emitted concurrently (i.e. in a parallel, distributed way) by all kinds of processes.
 </p>
 
-<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.24 (as of Saturday, April 19, 2025).
+<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of Traces version 1.0.26 (as of Saturday, August 23, 2025).
 </p>
 
 
@@ -36,7 +36,7 @@
 </p>
 
 <p>
-<b>Note that, currently, code based on WOOPER is not correctly taken into account by edoc</b>: due to limitations, most of the listed functions lack their documentation, and all methods and also generated code, such as constructors are invisible to edoc, respectively as it is not aware that they are actually exported in, or added to, the AST. However the full Traces codebase <em>is</em> intensely documented, refer to <a href="https://github.com/Olivier-Boudeville/Ceylan-Traces/tree/master/src" target="_blank">this repository</a> for full information.
+<b>Note that, currently, code based on WOOPER is not correctly taken into account by edoc</b>: due to some limitations, most of the listed functions lack their documentation, and all methods and also generated code, such as constructors, are invisible to edoc, respectively as it is not aware that they are actually exported in, or added to, the AST. However the full Traces codebase <em>is</em> intensely documented, refer to <a href="https://github.com/Olivier-Boudeville/Ceylan-Traces/tree/master/src" target="_blank">this repository</a> for full information.
 </p>
 
 <hr>
